# s-ball-anagram

./: .gitignore  README.md  anagrams.py  build_win_release.py  pyproject.toml
src/s_ball_anagram/: __about__.py  __main__.py  anagram.py
