[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "s-ball-anagram"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "s-ball", email = "s-ball@laposte.net" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = ["dict-fr-AU-DELA"]

[project.urls]
Documentation = "https://github.com/s-ball/s-ball-anagram#readme"
Issues = "https://github.com/s-ball/s-ball-anagram/issues"
Source = "https://github.com/s-ball/s-ball-anagram"

[tool.hatch.version]
path = "src/s_ball_anagram/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/s_ball_anagram tests}"

[tool.coverage.run]
source_pkgs = ["s_ball_anagram"]
branch = true
parallel = true
omit = [
  "src/s_ball_anagram/__about__.py",
]

[tool.coverage.paths]
s_ball_anagram = ["src/s_ball_anagram"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[project.scripts]
anagram = "s_ball_anagram.anagram:main"
